# mix-benchmarks

./: .gitmodules  README.md  kek.cu  program_options.cpp  program_options.hpp  report.bug  substring.cu  substring_mix.cu  susbtring_mix.cu
benchmark/: Makefile  benchmark_utils.cu  benchmark_utils.cuh  main.cpp  proxy.cu  substring_mix.cu  substring_mix.cuh
cpu_benchmarks/: .gitmodules  CMakeLists.txt
cpu_benchmarks/benchmarks/: CMakeLists.txt  Compiler.cpp
cpu_benchmarks/benchmarks/jones_naive_benchmark/: CMakeLists.txt  launcher.cpp  substring.c  substring.h
cpu_benchmarks/benchmarks/matrix_convolution/: CMakeLists.txt  convolution.c  convolution.h  launcher.cpp
cpu_benchmarks/benchmarks/naive_substring/: CMakeLists.txt  launcher.cpp  substring.c  substring.h
cpu_benchmarks/benchmarks/sparce_tensor_product/: CMakeLists.txt  launcher.cpp  tensor_product.c  tensor_product.h
cpu_benchmarks/kmp_benchmark/: Makefile  launcher.cpp  substring.c  substring.h  utils.cpp  utils.hpp
cpu_benchmarks/naive_substring/: Makefile  launcher.cpp  substring.c
cuda_benchmarks/: Makefile  benchmark_utils.cu  benchmark_utils.cuh  main.cpp  program_options.cpp  proxy.cuh  substring_mix.cu
string_benchmarks/: benchmark_utils.cu  benchmark_utils.cuh  program_options.cpp  program_options.cu  program_options.hpp  substring.cu  substring_mix.cu
